# baby

./: .gitignore  AUTHORS.txt  LICENSE.txt  MANIFEST.in  README.md  baby-server.py  brain.py  hatch.toml  modelsets.json  nn-basic-server.py  performance_tests.py  pyproject.toml  setup.py
models/: I1_unet4s_20190916.hdf5  I3_evolve_unet_4s_20200903.hdf5  I5_evolve_msd_d80_20200619.hdf5  I5_evolve_unet_4s_20200630.hdf5  I5_msd_d80_20190916.hdf5  ctrack_randomforest_20200325.pkl  ctrack_randomforest_20200903.pkl  ctrack_randomforest_20201006.pkl  ctrack_randomforest_20201008_nodist.pkl  flattener_60x_evolve_20200630.json  flattener_v2_20190905.json  morphviz_msd_d80_bn_20190624.hdf5  msd_d32r2_d16_grps_tv2_20190905.hdf5
python/baby/: __init__.py  augmentation.py  brain.py  brain_util.py  bud_trainer.py  crawler.py  errors.py  generator.py  hypermodels.py  io.py  layers.py  losses.py  models.py  modelsets.json  modelsets.py  morph_thresh_seg.py  performance.py  postprocessing.py  preprocessing.py  profile.py  run.py  seg_trainer.py  segmentation.py  server.py  speed_tests.py  track_trainer.py  tracker.py  tracker_benchmark.py  tracking.py  training.py  utils.py  visualise.py  volume.py
python/baby/models/: I1_evolve_unet_4s_20200630.hdf5  I1_prime_unet_4s_20200630.hdf5  I1_prime_unet_4s_20210302.hdf5  I3_prime_unet_4s_20200903.hdf5  I5_evolve_msd_d80_extra_20190916.hdf5  I5_evolve_msd_d80_extra_20200217.hdf5  I5_evolve_unet_4s_20201001.hdf5  I5_prime_unet_4s_20200630.hdf5  I5_prime_unet_4s_20201125.hdf5  I5_prime_unet_4s_20201208.hdf5  I5_prime_unet_4s_20210120.hdf5  baby_randomforest_20190720.pkl  baby_randomforest_20190906.pkl  ct_XGBC_20210520_5.pkl  ct_XGBC_20210520_7.pkl  ct_rf_20201029_12.pkl  ct_rf_20201029_6.pkl  ct_rf_20201029_7.pkl  ct_rf_20201029_8.pkl  ct_rf_20210105_10.pkl  ct_rf_20210120_9.pkl  ct_rf_20210209_8.pkl  ct_rf_20210322_14.pkl  ct_rf_20210322_15.pkl  ct_rf_20210323_12.pkl  ct_svc_20201106_12.pkl  ct_svc_20201106_13.pkl  ct_svc_20201106_7.pkl  ct_svc_20210106_10.pkl  ct_svc_20210110_8.pkl  ctrack_randomforest_20200513.pkl  ctrack_randomforest_20201006.pkl  ctrack_randomforest_20201008.pkl  ctrack_randomforest_20201008_nodist.pkl  ctrack_randomforest_20201012.pkl  ctrack_randomforest_20201012_nodist.pkl  flattener_60x_1z_prime_20210302.json  flattener_60x_evolve_20190916.json  flattener_60x_evolve_20200217.json  flattener_60x_evolve_20200619.json  (+9 more)
python/baby/tracker/: benchmark.py  bud_trainer_old.py  core.py  training.py  utils.py
python/baby/training/: __init__.py  bud_trainer.py  cnn_trainer.py  flattener_trainer.py  hyper_parameter_trainer.py  utils.py  (+6 more)
python/notebooks/: basic-training-workflow.ipynb  client-api.ipynb  example-baby-analysis-fig1.ipynb
tests/: brain_test.py  cnn_test.py  conftest.py  crawler_test.py  io_test.py  modelsets_test.py  parallel_test.py  segment_test.py  sklearn_save_test.py  tracker_test.py
tests/sklearn-test-data/: 20250602_budassign.npz  20250602_budassign.pkl  ct_rf_20210125_9.npz  ct_rf_20210201_12.npz  prime_ovlp_bf_60x_5z_20221219_mb_model.npz  test-data-20250602_budassign.npz  test-data-ct_rf_20210125_9.npz  test-data-ct_rf_20210201_12.npz  test-data-prime_ovlp_bf_60x_5z_20221219_mb_model.npz
(+1 files in other folders)
