[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baby-seg"
dynamic = ["version"]
description = "Birth Annotator for Budding Yeast"
readme = "README.md"
license-expression = "MIT"
license-file = "LICENSE.txt"
authors = [
    {name = "Julian Pietsch", email = "julian.pietsch@synmikro.mpi-marburg.mpg.de"}
]
requires-python = ">=3.6"
dependencies = [
    "aiohttp",
    "gaussianprocessderivatives",
    "matplotlib",
    "numpy",
    "pandas",
    "imageio",
    "pillow",
    "requests",
    "scikit-image",
    "scikit-learn<1.3",
    "scipy",
    "tensorflow>=1.14,<=2.14",
    "tensorflow-metal; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
dev = [
    "elasticdeform",
    "keras_tuner",
    "pytest",
]

[project.scripts]
baby-fit-grs = "baby.postprocessing:main"
baby-phone = "baby.server:main"
baby-race = "baby.speed_tests:main"

[project.urls]
Homepage =  "https://github.com/julianpietsch/baby"

[tool.hatch.version]
path = "python/baby/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "python/baby",
]

[tool.hatch.build.targets.sdist]
include = [
    "/python",
    "/AUTHORS.txt",
]
